--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Chat App</title>
     <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script defer src="script.js"></script>
-
+    
     <style>
         body {
           padding: 0;
@@ -46,11 +46,10 @@
       </style>
 </head>
 <body>
-    <div id="messgae-container"></div>
+    <div id="message-container"></div>
     <form action="" id="send-container">
         <input type="text" id="message-input">
         <button type="submit" id="send-button">Send</button>
     </form>
-    
 </body>
 </html>
